<resources>
    <string name="app_name">My Cart</string>

    <string name="item_title1">Book</string>
    <string name="item_title2">Food</string>
    <string name="item_title4">perfume</string>
    <string name="item_title3">Water</string>
    <string name="item_title5">Bottle</string>

    <string name="price1">100</string>
    <string name="price2">200</string>
    <string name="price3">150</string>
    <string name="price4">103</string>
    <string name="price5">10</string>

    <string name="is_true">1</string>
    <string name="is_false">0</string>
    <string name="title_activity_add_item_page">AddItemPageActivity</string>
    <string name="enter_the_name_of_the_product">Enter the Name of the Product</string>
    <string name="select_item">Select Item</string>
    <string name="select_item_type">Select Item Type</string>
    <string name="non_import_product">Non Imported Product</string>
    <string name="imported_item">Imported Item</string>
    <string name="go_to_cart">Go To Cart</string>

    <string-array name="select_item_dropdown">
        <item>Books</item>
        <item>Medicines</item>
        <item>Pizza</item>
        <item>Perfume</item>
        <item>Water</item>
        <item>Dress</item>
        <item>Shoe</item>
        <item>Watch</item>
        <item>Tomato</item>
    </string-array>
</resources>
