<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemPageActivity">

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias=".2" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias=".3" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias=".8" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias=".8" />

    <TextView
        android:id="@+id/product_brand_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_the_name_of_the_product"
        android:paddingTop="50dp"
        android:text="@string/enter_the_name_of_the_product"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/product_brand_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18dp"
        android:hint="Brand Name"
        app:layout_constraintTop_toBottomOf="@+id/product_brand_name_title" />

    <TextView
        android:id="@+id/select_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/select_item"
        android:textColor="@color/grey"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@id/product_brand_name"
        app:layout_constraintTop_toBottomOf="@id/product_brand_name" />

    <Spinner
        android:id="@+id/select_item_spinner"
        android:layout_width="wrap_content"
        style="@style/SpinnerStyle"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/select_item_title"
        app:layout_constraintTop_toBottomOf="@+id/select_item_title" />

    <TextView
        android:id="@+id/item_count_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:gravity="right"
        android:hint="Item Count"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/select_item_spinner"
        app:layout_constraintStart_toEndOf="@+id/select_item_title"
        app:layout_constraintTop_toBottomOf="@id/product_brand_name" />

    <EditText
        android:id="@+id/item_count"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:digits="0123456789"
        android:imeOptions="actionDone"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/item_count_title"
        app:layout_constraintHorizontal_bias=".8"
        app:layout_constraintLeft_toRightOf="@id/select_item_spinner"
        app:layout_constraintStart_toStartOf="@+id/item_count_title"
        app:layout_constraintTop_toBottomOf="@id/item_count_title" />

    <TextView
        android:id="@+id/item_type_title"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/select_item_spinner"
        app:layout_constraintTop_toBottomOf="@id/select_item_spinner"
        android:hint="@string/select_item_type"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_type"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/item_type_title"
        app:layout_constraintStart_toStartOf="@id/item_type_title"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imported_item"
            android:text="@string/imported_item"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/non_imported_item"
            android:text="@string/non_import_product"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:text="Total Price"
        android:id="@+id/price_title"
        app:layout_constraintStart_toStartOf="@+id/item_type"
        app:layout_constraintTop_toBottomOf="@+id/item_type"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:id="@+id/item_price"
        app:layout_constraintStart_toEndOf="@id/item_type_title"
        app:layout_constraintTop_toBottomOf="@id/item_type"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go_to_cart"
        android:text="@string/go_to_cart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom|right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>